// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FirewallRuleFormDialog Button add firewall rule operator Renders the component 1`] = `
<fragment-stub>
  <div><button type="button" disabled="disabled" class="v-btn v-btn--disabled v-btn--has-bg theme--light v-size--default" data-test="add-btn"><span class="v-btn__content">
          Add Rule
        </span></button></div><span class="v-tooltip v-tooltip--bottom"><!----></span>
  <div class="v-dialog__container">
    <!---->
  </div>
</fragment-stub>
`;

exports[`FirewallRuleFormDialog Button add firewall rule owner Renders the component 1`] = `
<fragment-stub>
  <div><button type="button" class="v-btn v-btn--is-elevated v-btn--has-bg theme--light v-size--default primary" data-test="add-btn"><span class="v-btn__content">
          Add Rule
        </span></button></div><span class="v-tooltip v-tooltip--bottom"><!----></span>
  <div class="v-dialog__container">
    <!---->
  </div>
</fragment-stub>
`;

exports[`FirewallRuleFormDialog Button edit firewall rule operator Renders the component 1`] = `
<fragment-stub><span><div data-test="edit-item" class="v-list-item__title">
          Edit
        </div></span><span class="v-tooltip v-tooltip--bottom"><!----></span><span><i aria-hidden="true" data-test="edit-icon" class="v-icon notranslate v-icon--disabled v-icon--left material-icons theme--light">edit</i></span>
  <div class="v-dialog__container">
    <!---->
  </div>
</fragment-stub>
`;

exports[`FirewallRuleFormDialog Button edit firewall rule owner Renders the component 1`] = `
<fragment-stub><span><div data-test="edit-item" class="v-list-item__title">
          Edit
        </div></span><span class="v-tooltip v-tooltip--bottom"><!----></span><span><i aria-hidden="true" data-test="edit-icon" class="v-icon notranslate v-icon--left material-icons theme--light">edit</i></span>
  <div class="v-dialog__container">
    <!---->
  </div>
</fragment-stub>
`;

exports[`FirewallRuleFormDialog Dialog creating firewall rule operator Renders the component 1`] = `
<fragment-stub>
  <div><button type="button" disabled="disabled" class="v-btn v-btn--disabled v-btn--has-bg theme--light v-size--default" data-test="add-btn"><span class="v-btn__content">
          Add Rule
        </span></button></div><span class="v-tooltip v-tooltip--bottom"><!----></span>
  <div class="v-dialog__container">
    <!---->
  </div>
</fragment-stub>
`;

exports[`FirewallRuleFormDialog Dialog creating firewall rule owner Renders the component 1`] = `
<fragment-stub>
  <div><button type="button" class="v-btn v-btn--is-elevated v-btn--has-bg theme--light v-size--default primary" data-test="add-btn"><span class="v-btn__content">
          Add Rule
        </span></button></div><span class="v-tooltip v-tooltip--bottom"><!----></span>
  <div class="v-dialog__container"></div>
</fragment-stub>
`;

exports[`FirewallRuleFormDialog Dialog editing firewall rule operator Renders the component 1`] = `
<fragment-stub><span><div data-test="edit-item" class="v-list-item__title">
          Edit
        </div></span><span class="v-tooltip v-tooltip--bottom"><!----></span><span><i aria-hidden="true" data-test="edit-icon" class="v-icon notranslate v-icon--disabled v-icon--left material-icons theme--light">edit</i></span>
  <div class="v-dialog__container">
    <!---->
  </div>
</fragment-stub>
`;

exports[`FirewallRuleFormDialog Dialog editing firewall rule owner Renders the component 1`] = `
<fragment-stub><span><div data-test="edit-item" class="v-list-item__title">
          Edit
        </div></span><span class="v-tooltip v-tooltip--bottom"><!----></span><span><i aria-hidden="true" data-test="edit-icon" class="v-icon notranslate v-icon--left material-icons theme--light">edit</i></span>
  <div class="v-dialog__container"></div>
</fragment-stub>
`;
